<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>
  <groupId>com.test.shoop</groupId>
  <artifactId>Shoop-ApplicationTests</artifactId>
  <packaging>jar</packaging>
  <version>1.0-SNAPSHOT</version>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <selenium.version>3.0.0</selenium.version>
    <cucumber.version>1.2.4</cucumber.version>
    <junit.version>4.12</junit.version>
    <phantamjs.version>1.2.1</phantamjs.version>
    <!-- configurable variables-->
    <surefire.fork.count>4</surefire.fork.count>
  </properties>
  <dependencies>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-firefox-driver</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-server</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-chrome-driver</artifactId>
      <version>2.44.0</version>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-ie-driver</artifactId>
      <version>${selenium.version}</version>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <version>3.2.5.RELEASE</version>
    </dependency>
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-junit</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-java</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.googlecode.javacpp</groupId>
      <artifactId>javacpp</artifactId>
      <version>0.4</version>
    </dependency>
    <!--<dependency>-->
      <!--<groupId>org.bytedeco</groupId>-->
      <!--<artifactId>javacv</artifactId>-->
      <!--<version>0.8</version>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.bytedeco</groupId>-->
      <!--<artifactId>javacv</artifactId>-->
      <!--<version>0.8</version>-->
      <!--<classifier>macosx-x86_64</classifier>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.bytedeco</groupId>-->
      <!--<artifactId>javacv</artifactId>-->
      <!--<version>0.1</version>-->
      <!--<classifier>windows-x86</classifier>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.bytedeco</groupId>-->
      <!--<artifactId>javacv</artifactId>-->
      <!--<version>0.1</version>-->
      <!--<classifier>windows-x86_64</classifier>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>org.bytedeco</groupId>-->
      <!--<artifactId>javacv</artifactId>-->
      <!--<version>0.1</version>-->
      <!--<classifier>linux-x86_64</classifier>-->
    <!--</dependency>-->
    <!--<dependency>-->
      <!--<groupId>com.googlecode.javacv</groupId>-->
      <!--<artifactId>javacv</artifactId>-->
      <!--<version>0.7</version>-->
      <!--<classifier>linux-x86</classifier>-->
    <!--</dependency>-->
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>cucumber-core</artifactId>
      <version>${cucumber.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.seleniumhq.selenium</groupId>
      <artifactId>selenium-support</artifactId>
      <version>${selenium.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.sikuli</groupId>
      <artifactId>sikuli-webdriver</artifactId>
      <version>1.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.sikuli</groupId>
      <artifactId>sikuli-api</artifactId>
      <version>1.2.0</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-log4j12</artifactId>
      <version>1.7.12</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>net.masterthought</groupId>
      <artifactId>cucumber-reporting</artifactId>
      <version>2.0.0</version>
    </dependency>
    <dependency>
      <groupId>info.cukes</groupId>
      <artifactId>gherkin</artifactId>
      <version>2.12.2</version>
      <scope>test</scope>
    </dependency>
      <dependency>
          <groupId>info.cukes</groupId>
          <artifactId>cucumber-core</artifactId>
          <version>1.2.5</version>
          <scope>test</scope>
      </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
        <version>2.3.2</version>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.2.1</version>
        <executions>
          <execution>
            <id>script-chmod</id>
            <phase>install</phase>
            <goals>
              <goal>exec</goal>
            </goals>
            <configuration>
              <executable>chmod</executable>
              <arguments>
                <argument>+x</argument>
                <argument>/src/test/resources/</argument>
              </arguments>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
          <groupId>com.lazerycode.selenium</groupId>
          <artifactId>driver-binary-downloader-maven-plugin</artifactId>
          <version>1.0.9</version>
          <configuration>
            <!-- root directory that downloaded driver binaries will be stored in -->
            <rootStandaloneServerDirectory>src/resources/binaries</rootStandaloneServerDirectory>
            <!-- Where you want to store downloaded zip files -->
            <downloadedZipFileDirectory>src/resources/zips</downloadedZipFileDirectory>
          </configuration>
          <executions>
            <execution>
              <goals>
                <goal>selenium</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>2.19.1</version>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
        <configuration>
          <forkCount>${surefire.fork.count}</forkCount>
          <reuseForks>false</reuseForks>
          <argLine>-Duser.language=en</argLine>
          <argLine>-Xmx1024m</argLine>
          <argLine>-XX:MaxPermSize=256m</argLine>
          <argLine>-Dfile.encoding=UTF-8</argLine>
          <useFile>false</useFile>
        <includes>
          <include>**/*LoginOutRunner.class</include>
        </includes>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
    	<plugins>
    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
    		<plugin>
    			<groupId>org.eclipse.m2e</groupId>
    			<artifactId>lifecycle-mapping</artifactId>
    			<version>1.0.0</version>
    			<configuration>
    				<lifecycleMappingMetadata>
    					<pluginExecutions>
    						<pluginExecution>
    							<pluginExecutionFilter>
    								<groupId>
    									com.lazerycode.selenium
    								</groupId>
    								<artifactId>
    									driver-binary-downloader-maven-plugin
    								</artifactId>
    								<versionRange>
    									[1.0.9,)
    								</versionRange>
    								<goals>
    									<goal>selenium</goal>
    								</goals>
    							</pluginExecutionFilter>
    							<action>
    								<ignore></ignore>
    							</action>
    						</pluginExecution>
    					</pluginExecutions>
    				</lifecycleMappingMetadata>
    			</configuration>
    		</plugin>
    	</plugins>
    </pluginManagement>
  </build>
</project>
